--- a/src/CombatAnalysis.App/Localizations/Resources/CombatPlayers/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatPlayers/Resource.ru.resx
@@ -165,6 +165,9 @@
   <data name="HealingPerSecond" xml:space="preserve">
     <value>Исцеление в сек.</value>
   </data>
+  <data name="Lose" xml:space="preserve">
+    <value>Поражение</value>
+  </data>
   <data name="MinDamage" xml:space="preserve">
     <value>Мин. урон</value>
   </data>
@@ -224,5 +227,8 @@
   </data>
   <data name="ValuePerSecond" xml:space="preserve">
     <value>Значение в секунду</value>
+  </data>
+  <data name="Win" xml:space="preserve">
+    <value>Победа</value>
   </data>
 </root>
