Fix Create chat from Web app
Fix Create chat from Web app

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/create.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/create.json
@@ -8,6 +8,7 @@
   "TypeOfCommunity": "Type of community",
   "PrivateWithLink": "Private (with link)",
   "Create": "Create",
+  "Creating": "Creating...",
   "Close": "Close",
   "Back": "Back",
   "Next": "Next",
