--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/create.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/create.json
@@ -8,6 +8,7 @@
   "TypeOfCommunity": "Тип сообщества",
   "PrivateWithLink": "Закрытый (с ссылкой)",
   "Create": "Создать",
+  "Creating": "Создание...",
   "Close": "Закрыть",
   "Back": "Назад",
   "Next": "Дальше",
